# chespirito-api

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: integrations.yaml
app/: __init__.py  main.py  models.py
scripts/: migrations.py  run_tests.sh  setup_mongo.sh
scripts/migrations/chaves/: episodes1973.json
scripts/migrations/general/: actors.json  actresses.json
tests/: test_app.py
