[tool.poetry]
name = "app"
version = "0.1.0"
description = "Uma API pública que foi feita sem querer querendo."
authors = ["Pery Lemke <pery.lemke@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
